// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list item for the role 1`] = `
<li>
  get, create
   
  <code>
    tests
  </code>
   
  <span>
    (
    <code>
      test.kubeapps.com
    </code>
    )
  </span>
   
  in 
  <span>
    the 
    <code>
      test
    </code>
     namespace
  </span>
  .
</li>
`;

exports[`renders the special case for cluster-wide roles 1`] = `
<li>
  get, create
   
  <code>
    tests
  </code>
   
  <span>
    (
    <code>
      test.kubeapps.com
    </code>
    )
  </span>
   
  in 
  all namespaces
  .
</li>
`;

exports[`uses the roles' namespace over the current namespace if defined 1`] = `
<li>
  get, create
   
  <code>
    tests
  </code>
   
  <span>
    (
    <code>
      test.kubeapps.com
    </code>
    )
  </span>
   
  in 
  <span>
    the 
    <code>
      another
    </code>
     namespace
  </span>
  .
</li>
`;
